src/iisnode/WIN-LP7VQ5KUMG8-12184-stderr-1688928052258.txt
Application has thrown an uncaught exception and is terminated:
C:\nodejs\server\src\middlewares\checkPassword.js:1
import * as userRepository from '../dataAccess/auth/userRepository.js';
^^^^^^

SyntaxError: Cannot use import statement outside a module
    at internalCompileFunction (node:internal/vm:73:18)
    at wrapSafe (node:internal/modules/cjs/loader:1178:20)
    at Module._compile (node:internal/modules/cjs/loader:1220:27)
    at Module._extensions..js (node:internal/modules/cjs/loader:1310:10)
    at Module.load (node:internal/modules/cjs/loader:1119:32)
    at Module._load (node:internal/modules/cjs/loader:960:12)
    at Module.require (node:internal/modules/cjs/loader:1143:19)
    at require (node:internal/modules/cjs/helpers:110:18)
    at Object.<anonymous> (C:\nodejs\server\src\routes\auth\userRoutes.js:8:27)
    at Module._compile (node:internal/modules/cjs/loader:1256:14)
